Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -65,13 +65,11 @@
 <li>base cookies support</li>
 <li>static files serving</li>
 <li>http logger and timer for developers</li>
-<li>simple environments support</li>
+<li>simple environments support
+<img src="http://s019.radikal.ru/i635/1506/28/bac4764b9e03.png" alt="Amethyst-logo">
+## Example
+Here is classic 'Hello World' in Amethyst</li>
 </ul>
-
-<h2>
-<a id="example" class="anchor" href="#example" aria-hidden="true"><span class="octicon octicon-link"></span></a>Example</h2>
-
-<p>Here is classic 'Hello World' in Amethyst</p>
 
 <div class="highlight highlight-crystal"><pre><span class="pl-k">require</span> <span class="pl-s"><span class="pl-pds">"</span>amethyst<span class="pl-pds">"</span></span>
 
