Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section>
         <p><img src="http://s019.radikal.ru/i635/1506/28/bac4764b9e03.png" alt="Amethyst-logo"></p>
 
-<p>Amethyst is a web framework written in <a href="https://github.com/manastech/crystal">Crystal</a> language. The goals of Amethyst are to be fast as Node.js and comfortable as Rails. Note, Amethyst is at early stage of developing, so a lot of features are missing yet. However, it works :). Why I called my web framework "Amethyst"? Because Crystal  has a light purple color at GitHub like <a href="http://en.wikipedia.org/wiki/Amethyst">amethyst gemstone</a>.</p>
+<p>Amethyst is a web framework written in <a href="https://github.com/manastech/crystal">Crystal</a> language. The goals of Amethyst are to be fast as Node.js and comfortable as Rails. Note, Amethyst is at early stage of developing, so a lot of features are missing yet. However, it works :). Why I called it "Amethyst"? Because Crystal  has a light purple color at GitHub like <a href="http://en.wikipedia.org/wiki/Amethyst">amethyst gemstone</a>.</p>
 
 <p>Latest version - <a href="https://github.com/Codcore/Amethyst/releases/tag/v0.0.7">0.0.7</a></p>
 
